# rvnvmicomm

./: .gitlab-ci.yml  CMakeLists.txt  README.md  vmiclient.c
cmake/: rvnvmicomm_client-config.cmake  rvnvmicomm_server-config.cmake
include/rvnvmicomm_client/: vmiclient.h
include/rvnvmicomm_common/: reven-vmi.h
include/rvnvmicomm_server/: vmiserver.h
src/client/: vmiclient.c
src/server/: vmiserver.c
test/: CMakeLists.txt  test_callbacks.cpp  test_common.c  test_common.h  test_main.cpp  test_read_memory.cpp  test_read_register.cpp  test_server_implem.c  test_server_implem.h  test_start_stop_connect.cpp
